--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,8 @@ table {
 }
 /*----------------------------------------------------------------------------*/
 body{
+	height: 100%;
+	width: 100%;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -69,4 +71,42 @@ body{
 .mrmonkey > img, .elpenguino > img, .mskitty > img {
     width: 50px;
     border-radius: 100%;
+}
+
+.imgContainer {
+	top: 0;
+	left: 0;
+	z-index: -100;
+	position: absolute;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-color: rgba(255, 192, 203, 0.633);
+	
+}
+
+.pixelCafe {
+
+	opacity: 10%;
+	height: 5000px;
+	width: 9000px;
+	animation: slide 7s linear infinite;
+	animation-fill-mode: forwards;
+}
+
+@keyframes slide {
+
+	0%{
+		transform: translate(0%, 0%);
+		
+	}
+	100%{
+		transform: translate(-600px, -335px);
+
+	}
+
+	
 }
