--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,15 @@ body{
 	gap: 20px;
 	padding: 10px;
 	border-radius: 15px;
+	height: 100%;
+}
+
+
+#content > h1 {
+	font-size: 30px;
+	color: pink;
+	text-shadow: 1px 1px black;
+	
 }
 
 .homeContent {
@@ -78,29 +87,37 @@ body{
 	width: 100%;
 	display: grid;
 	justify-items: center;
-	grid-template-columns: 0.8fr 0.4fr;
+	grid-template-columns: 1fr 0.4fr;
 	gap: 20px;
-	
-}
-#content > h1 {
-	font-size: 30px;
-	color: pink;
-	text-shadow: 1px 1px black;
 	
 }
 
 .reviewsContainer {
 	display: grid;
 	grid-template-columns: 1fr;
+	grid-template-rows: 0.2fr;
 	gap: 20px;
 }
 
 .openHours{
-	width: 250px;
+	
+	width: 43vh;
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 0.2fr 0.1fr 0.1fr;
 	text-align: center;
+}
+
+.openHours > p {
+	font-size: 14px;
+	font-style: italic;
+	text-shadow: 0.5px 0.5px black;
+	animation: timer 1s infinite ;
+}
+
+@keyframes timer{
+	0%{color: white;}
+	100%{color: black;}
 }
 
 .openHours > h1{
@@ -108,16 +125,23 @@ body{
 }
 
 .customerReviews > p {
-	width: 30vh;
+	width: 40vh;
 }
 nav{
-	font-size: 32px;
+	
 	display: grid;
-	grid-template-columns:  50px 50px 50px;
+	grid-template-columns:  2fr 2fr 2fr;
 	gap: 20px;
 	justify-content: center;
 	height: 50px;
 	padding: 15px;
+}
+
+.homeNav, .menuNav, .contactNav{
+	text-align: center;
+	font-size: 32px;
+	width: 100px;
+	cursor: pointer;
 }
 
 .homeNav:hover, .menuNav:hover, .contactNav:hover {
@@ -133,7 +157,7 @@ nav{
 	grid-template-columns: 1fr 1fr;
 	padding: 10px;
 	margin: 5px;
-	width: 25vw;
+	width: 350px;
 	
 	
 }
@@ -159,19 +183,36 @@ nav{
 	object-fit: contain;
 }
 
+.contactContainer {
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 20px;
+	justify-content: center;
+}
+
+.mrmonkey, .elpenguino, .mskitty{
+	display: grid;
+	justify-items: center;
+}
+
 .mrmonkey > img, .elpenguino > img, .mskitty > img {
-    width: 50px;
-    border-radius: 100%;
+    width: 5vh;
+    border: 1px black solid;
+	border-radius: 1px;
+	display: flex;
+	justify-content: center;
+	justify-items: center;
+	object-fit: contain;
 }
 
 .imgContainer {
-	top: 0;
-	left: 0;
-	z-index: -100;
+	top: 0px;
+	left: 0px;
+	z-index: -1000;
 	position: absolute;
 	overflow: hidden;
 	width: 100%;
-	height: 90vw;
+	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
